# fastzero

./: .coverage  .env  .gitignore  Dockerfile  README.md  compose.yaml  database.db  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  pipeline.yaml
fastzero/: app.py  database.py  factories.py  models.py  schemas.py  security.py  settings.py
fastzero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 22b3ea425258_create_todos_table.py  2baf1c511539_update_users_add_update_at_column.py  3f5e56e64260_update_users_add_update_at_column_.py  c606631466ea_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
