[tool.poetry]
name = "fastzero"
version = "0.1.0"
description = ""
authors = ["Schmidt <aoshiminamoto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
sqlmodel = "^0.0.22"
psycopg = "^3.2.3"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true

[tool.taskipy.tasks]
run = "fastapi dev ./fastzero/app.py"

pre_test = "task lint"
test = "pytest -s -x -v --cov=fastzero"
post_test = "coverage html"

lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
